src/objects/acfCMS_Page__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>acfAttachment_Id__c</fullName>
        <description>Click Loans</description>
        <label>Attachment Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfBG_Image__c</fullName>
        <description>Click Loans</description>
        <formula>IMAGE(acfImage_URL__c , &apos;Click Home Image&apos; , 50, 100)</formula>
        <label>BG Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDescription__c</fullName>
        <description>Click Loans</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>acfHeading__c</fullName>
        <description>Click Loans</description>
        <label>Heading</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfImage_URL__c</fullName>
        <description>Click Loans</description>
        <formula>IF(acfAttachment_Id__c  &lt;&gt; null,&quot;/servlet/servlet.FileDownload?file=&quot; &amp; acfAttachment_Id__c , &quot;&quot;)</formula>
        <label>Image URL</label>
        <type>Text</type>
    </fields>
    <label>Click Loans CMS Page</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CMS Page</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Click_Home_Name_Rule</fullName>
        <active>true</active>
        <description>Section names of click home page can&apos;t be modifiable.</description>
        <errorConditionFormula>If(AND(ISCHANGED(Name),CONTAINS(PRIORVALUE(Name),&apos;ClickHome&apos;)),true,false)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>You don&apos;t have access to edit this field.</errorMessage>
    </validationRules>
</CustomObject>